<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackred"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.helloworld.tomek.helloworld.AboutActivity">

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutTextViewText"
        android:textSize="30dp"
        style="@style/textViewStyle" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTextView"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:text="@string/aboutContact"
        style="@style/textViewStyle"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/contactEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minLines="8"
        android:nestedScrollingEnabled="true"
        android:gravity="top"
        style="@style/editTextStyle" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/contactEditText"
        android:text="@string/contactButtonText"
        android:onClick="contactButtonClick"
        style="@style/buttonStyle"/>


</RelativeLayout>
